--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
           <div class="work__box">
             <div class="work__text reveal">
-              <h3>Indiebrew website/h3>
+              <h3>Indiebrew website</h3>
               <p>
                 Indiebrew website, it has a SIGNIN and SIGNOUT page
               </p>
