--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <div class="work__box">
             <div class="work__text reveal">
-              <h3>Easybank landing page</h3>
+              <h3>Easybank Website</h3>
               <ul class="work__list">
                 <li>HTML</li>
                 <li>CSS</li>
@@ -141,7 +141,7 @@
 
           <div class="work__box">
             <div class="work__text reveal">
-              <h3>Manage landing page</h3>
+              <h3>Manage Website</h3>
               <ul class="work__list">
                 <li>HTML</li>
                 <li>CSS</li>
@@ -230,7 +230,7 @@
 
           <div class="work__box">
             <div class="work__text reveal">
-             <h3>HIAEM Wensite</h3>
+             <h3>HIAEM Website</h3>
               <p>God Is Able Evangelical Mission Website</p>
               <ul class="work__list">
                 <li>HTML</li>
