--- a/index.html
+++ b/index.html
@@ -95,6 +95,28 @@
 
           <!-- Each div with the work__box class is a project. -->
 
+
+           
+          <div class="work__box">
+            <div class="work__text reveal">
+              <h3>Gpt3 Website</h3>
+              <p>An open AI website</p>
+              <ul class="work__list">
+                <li>REACT</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://gptweb3.netlify.app/" target="_blank" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box reveal">
+              <img src="/images/Screenshot (105).png" class="work__image" alt="Project 1" />
+            </div>
+          </div>
+
+
           <div class="work__box">
             <div class="work__text reveal">
               <h3>Easybank Website</h3>
