--- a/index.html
+++ b/index.html
@@ -117,6 +117,27 @@
           </div>
 
 
+
+          <div class="work__box">
+            <div class="work__text reveal">
+              <h3>Hoobank Website</h3>
+              <p>A Banking website</p>
+              <ul class="work__list">
+                <li>REACT</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://hookbank1.netlify.app/" target="_blank" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box reveal">
+              <img src="/images/hoobank.png" class="work__image" alt="Project 1" />
+            </div>
+          </div>
+
+
           <div class="work__box">
             <div class="work__text reveal">
               <h3>Easybank Website</h3>
