--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="work__text reveal">
               <h3>Indiebrew</h3>
               <p>
-                Indiebrew Landing Page
+                Indiebrew Website
               </p>
               <ul class="work__list">
                 <li>HTML</li>
@@ -869,7 +869,7 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
       <script src="/contact.js"></script>
 
-      
+
   <script src="./app.js"></script>
 </body>
 
